FCL-1725 | fix search spacing

--- a/ds_judgements_public_ui/sass/components/_search_input.scss
+++ b/ds_judgements_public_ui/sass/components/_search_input.scss
@@ -1,4 +1,7 @@
 .search-input {
+  display: flex;
+  flex-direction: column;
+  gap: $space-2;
   width: 100%;
 
   h1,
